<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="13dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="13dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="#303239"
    card_view:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:ignore="WebViewLayout">

        <ImageView
            android:id="@+id/img_users_fv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/todo"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:fontFamily="casual"
            android:maxLines="1"
            android:text="@string/users"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/img_users_fv"
            card_view:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_repo_url"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:drawableStart="@drawable/ic_baseline_archive_24"
            android:text="@string/url"
            android:paddingEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/img_users_fv"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:ignore="RtlSymmetry" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>