<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2b2b31"
    tools:context=".ui.detail.GithubDetailActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_root_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior=".ui.detail.FlingBehavior">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/main.imageview.placeholder"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/top_head_background_height"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY"
                        android:src="@drawable/bg" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/background_Image_tint" />
                </FrameLayout>


                <FrameLayout
                    android:id="@+id/fl_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true" />


                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/anim_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:visibility="invisible"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/tv_constraint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally="true"
                    android:visibility="invisible"
                    app:layout_collapseMode="pin"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/tv_username_mini"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="15dp"
                        android:ellipsize="end"
                        android:fontFamily="casual"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="@string/users"
                        android:textAllCaps="true"
                        android:textColor="#4CAF50"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_avatar_mini"
                        app:layout_constraintTop_toTopOf="parent" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_avatar_mini"
                        android:layout_width="@dimen/default_collapsed_image_size"
                        android:layout_height="@dimen/default_collapsed_image_size"
                        android:layout_gravity="end"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/avatar_load"
                        app:civ_border_color="@color/color_white"
                        app:civ_border_width="1.5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/tv_workaround"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="center_horizontal"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/users"
                    android:textAllCaps="true"
                    android:textColor="@color/color_white"
                    android:textSize="17sp"
                    android:visibility="invisible"
                    app:layout_collapseMode="pin"
                    tools:visibility="invisible" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/tv_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_avatar"
                        android:layout_width="@dimen/default_expanded_image_size"
                        android:layout_height="@dimen/default_expanded_image_size"
                        android:layout_marginTop="80dp"
                        android:src="@drawable/avatar_load"
                        app:civ_border_color="@color/color_white"
                        app:civ_border_width="1.5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="casual"
                        android:text="@string/users"
                        android:textColor="#4CAF50"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

                    <TextView
                        android:id="@+id/lbl_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/lbl_name"
                        android:textColor="#a2a2a8"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

                    <TextView
                        android:id="@+id/tv_value_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:maxLines="2"
                        android:textColor="#a2a2a8"
                        app:layout_constraintStart_toEndOf="@+id/lbl_name"
                        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

                    <TextView
                        android:id="@+id/lbl_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/lbl_company"
                        android:textColor="#a2a2a8"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_value_name" />

                    <TextView
                        android:id="@+id/tv_value_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:maxLines="2"
                        android:textColor="#a2a2a8"
                        app:layout_constraintStart_toEndOf="@+id/lbl_company"
                        app:layout_constraintTop_toBottomOf="@+id/tv_value_name" />

                    <TextView
                        android:id="@+id/lbl_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/lbl_location"
                        android:textColor="#a2a2a8"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_value_company" />

                    <TextView
                        android:id="@+id/tv_value_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:maxLines="2"
                        android:textColor="#a2a2a8"
                        app:layout_constraintStart_toEndOf="@+id/lbl_location"
                        app:layout_constraintTop_toBottomOf="@+id/tv_value_company" />

                    <TextView
                        android:id="@+id/lbl_repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/lbl_repository"
                        android:textColor="#a2a2a8"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_value_location" />

                    <TextView
                        android:id="@+id/tv_value_repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:maxLines="1"
                        android:textColor="#a2a2a8"
                        app:layout_constraintStart_toEndOf="@+id/lbl_repository"
                        app:layout_constraintTop_toBottomOf="@+id/tv_value_location" />

                    <TextView
                        android:id="@+id/lbl_follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/lbl_follower"
                        android:textColor="#a2a2a8"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lbl_repository" />

                    <TextView
                        android:id="@+id/tv_value_follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:maxLines="1"
                        android:textColor="#a2a2a8"
                        app:layout_constraintStart_toEndOf="@+id/lbl_follower"
                        app:layout_constraintTop_toBottomOf="@+id/lbl_repository" />

                    <TextView
                        android:id="@+id/lbl_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/lbl_following"
                        android:textColor="#a2a2a8"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lbl_follower" />

                    <TextView
                        android:id="@+id/tv_value_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:maxLines="1"
                        android:textColor="#a2a2a8"
                        app:layout_constraintStart_toEndOf="@+id/lbl_following"
                        app:layout_constraintTop_toBottomOf="@+id/lbl_follower" />

                    <Button
                        android:id="@+id/btn_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_background"
                        android:drawableStart="@drawable/ic_baseline_favorite_24"
                        android:padding="10dp"
                        android:text="@string/add_to_favorite"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lbl_following" />

                    <ProgressBar
                        android:id="@+id/detail_load"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tabBackground="@drawable/tab_color_selector"
                app:tabTextColor="@android:color/white" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabs" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>